frame/support/test/tests/construct_runtime_ui/test_setup_non_construct_runtime_macro.rs
#[frame_support::setup_default_test_parameters]
parameter_types! {
    pub const Foo: u32 = 1337;
}

fn main() {}
